# sympg

./: README.md  pyproject.toml
.github/workflows/: release.yml
notebooks/: cluster_test.py
sympg/: __init__.py  correlations.py  diagnostics.py  distributions.py  plotting.py  simulator.py
sympg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_plotting.py  test_sympg.py
